--- a/src/pages/ALLO.css
+++ b/src/pages/ALLO.css
@@ -1,10 +1,10 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 25px;
+    /* font-style: normal; */
+    /* font-weight: 400; */
+    /* font-size: 16px;
+    line-height: 25px; */
     background: #E6E9F2;
     
    
