--- a/src/pages/JobDetails.css
+++ b/src/pages/JobDetails.css
@@ -2,24 +2,37 @@
     background:  #ffffff;
 }
 .box1 {
-   display:block;
-   /* display:inline-flex; */
-   
+   display: flex;
+   justify-content:space-between;
+}
+
+.separator{
+    border-bottom: 1px solid #ddd;
+}
+.separatorA  {
+    border-bottom: 1px solid #ddd;
    
 }
+.separatorB{
+    border-bottom: 1px solid #ddd;
+   
+}
+
 .box1 .box1_b{
     display: inline-flex;
-   
     mix-blend-mode: normal;
     opacity: 0.8;
     font-weight: 400;
-font-size: 16px;
-line-height: 23px;
-text-align: center;
-letter-spacing: -0.5px;
-color: rgba(56, 65, 93, 0.82);
-overflow: hidden;
+    font-size: 16px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: -0.5px;
+    color: rgba(56, 65, 93, 0.82);
+    overflow: hidden;
+    order: 2;
+    margin-top: 15px;
 }
+
 .box1 .box1_b img{
    width: 40px;
    height: 40px;
@@ -41,6 +54,12 @@ opacity: 0.8;
    display: flex;
 }
 
+.details .container3 .box1 #h1{
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 34px;
+    letter-spacing: 0.413333px; 
+}
 .details h1 {
     font-weight: 700;
     font-size: 28px;
@@ -48,6 +67,7 @@ opacity: 0.8;
     letter-spacing: 0.413333px;
     border-bottom: 1px solid #ddd;
 }
+
 
 .details .container3 {
     background: #ffffff;
@@ -236,6 +256,7 @@ opacity: 0.8;
         width: 500px;
         padding-right: 70px;
         }
+    
 }
 
 @media (min-width:1015px) {
@@ -250,12 +271,16 @@ opacity: 0.8;
       .container3 button{
         margin: 30px 0px;
     }
+    .separatorA{
+        visibility: hidden;
+    }
 }
 
 @media (min-width:1240px) {
     .container3{
         margin-left: 300px;
     }
+    
 }
 
 @media (max-width:1015px) {
@@ -270,5 +295,17 @@ opacity: 0.8;
     .box2{
         display: block;
     }
-  
+    .box1{
+        /* display: block; */
+        display:contents;
+    }
+    .box1 .box1_b{
+        order: 2;
+    }
+    .separatorA{
+        visibility: visible;
+    }
+    .separatorB{
+        visibility: hidden;
+    }
 }
