--- a/src/pages/JobDetails.css
+++ b/src/pages/JobDetails.css
@@ -117,7 +117,7 @@ opacity: 0.8;
     color: rgba(56, 65, 93, 0.82);
 }
 
-.container3 button {
+.details .container3  button {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -236,6 +236,33 @@ opacity: 0.8;
    color: rgb(230, 230, 230);
 }
 
+.details #back{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    
+    background: #cad1e2;
+    border-radius: 8px ;
+    width: 213px;
+    height: 50px;
+    
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    margin: 15px 30px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); 
+    opacity: 0.8;
+    mix-blend-mode: normal;
+    text-align: center;
+    text-transform: uppercase;
+   
+    gap: 10px;
+    color: #3A4562;
+    }
+    .details a {
+        text-decoration: none;
+    }
 /*------------- MAP -------------*/
 .map-container {
     width: 300px;
@@ -274,14 +301,11 @@ opacity: 0.8;
     .separatorA{
         visibility: hidden;
     }
-}
-
-@media (min-width:1240px) {
     .container3{
         margin-left: 300px;
     }
-    
 }
+
 
 @media (max-width:1015px) {
     #Bone{
@@ -308,4 +332,8 @@ opacity: 0.8;
     .separatorB{
         visibility: hidden;
     }
+    .details #back{
+        display: none;
+    }
 }
+
