--- a/src/pages/All.css
+++ b/src/pages/All.css
@@ -15,23 +15,34 @@ body {
   row-gap: 8px;
 }
 
-.container img {
+.container .card .frontPic img {
   display: flex;
   align-items: flex-start;
   width: 85px;
   height: 85px;
   border-radius: 50%;
-  margin-top: 30px;
+  margin: 30px 0 0 15px;
 }
 
 .container .card {
   position: relative;
   display: flex;
+  max-width: 1000px;
   margin: 9px;
   padding: 10px 5px;
   background: #ffffff;
   border-radius: 10.4px;
   box-shadow: 2px 1px 7px rgba(0, 0, 0, 0.08), 0px 2px 1px -1px rgba(0, 0, 0, 0.04), 0px 1px 3px rgba(0, 0, 0, 0.12);
+}
+
+.container .info {
+  font-size: 16px;
+  letter-spacing: 0.23619px;
+  color: #878D9D;
+  align-self: stretch;
+  position: relative;
+  flex-grow: 0;
+  margin: 0 30px;
 }
 
 .container .card .info a {
@@ -45,19 +56,7 @@ body {
   padding-bottom: 5px;
 }
 
-
-.container .info {
-  font-size: 16px;
-  letter-spacing: 0.23619px;
-  color: #878D9D;
-  align-self: stretch;
-  position: relative;
-  flex-grow: 0;
-  margin: 0 30px;
-}
-
-
-.container .info img {
+.container .card .info img {
   display: inline;
   width: 16px;
   height: 16px;
@@ -70,13 +69,10 @@ body {
 }
 
 .container .card .left p {
-
-
   font-size: 16px;
   line-height: 25px;
   letter-spacing: 0.23619px;
   color: #878D9D;
-
   display: flex;
   align-items: flex-end;
   position: absolute;
@@ -85,35 +81,19 @@ body {
   bottom: 5%;
 }
 
-.container .card .left img {
-  width: 32px;
-  height: 32px;
-  position: absolute;
-  right: 2%;
-  top: 0%;
-  bottom: 0%;
-  color: #70778B;
-  opacity: 50%;
-
-}
-
 .container .card .left .check {
   position: absolute;
   top: 28px;
   right: 8px;
-  /* opacity: 0.5; */
-  /* background: #ffffff; */
-  /* border: none; */
-  /* color: #FFFFFF; */
 }
 
 .container .card .left .grade {
   position: absolute;
   top: 40px;
-  right: 110px;
+  right: 150px;
 }
 
-
+/*------------- MEDIA -------------*/
 @media (min-width:750px) {
   .container .card .left .gradeSmall {
     display: none;
@@ -121,25 +101,18 @@ body {
 }
 
 @media (max-width:750px) {
-  .container .card .left img {
-    visibility: hidden;
-  }
-
   .container .card .left p {
-    display: inline-flex;
-    /* align-items: flex-end; ----------------*/
-    position: absolute;
+    display: flex;
+    align-items: flex-start;
     font-size: 0.7em;
-    /* margin: 0; */
-    bottom: 85%;
-    right: 30px;
-
   }
 
-
+  .container .card .info .ET_ul {
+    font-size: 0.7em;
+  }
 
   .container .card .info a {
-    font-size: 15px;
+    font-size: 1em;
     font-weight: 400px;
     line-height: 24px;
     margin-right: 50px;
@@ -147,21 +120,17 @@ body {
   }
 
   .container .card {
-    background: #E6E9F2;
+    background: #eef0f4;
   }
 
-  .container .card .left .check {
+  .container .card .left .check,
+  .grade {
     display: none;
   }
 
-  .container .card .left .grade {
-    display: none;
-  }
   .container .card .left .gradeSmall {
     position: absolute;
-    /* top: 7px; */
-    top: 3%;
-    left: 118px;
-   
+    top: 4.5%;
+    left: 130px;
   }
 }
